<resources>
    <string name="app_name">Info Hits Bandung</string>
    <string name="start">Start Journey</string>
    <string name="wisata">Wisata</string>
    <string name="makanan_khas">Jajanan Khas</string>
    <string name="belanja">Belanja</string>
    <string name="oleh2">Oleh-Oleh Bandung</string>
    <string name="content_masjid1">Masjid Raya Bandung adalah salah satu masjid yang lokasinya tepat berada di tengah kota Bandung, Arsitektur masjid ini terlihat sangat khas dan megah. Pengunjung yang datang ke Masjid Raya Bandung ini selalu ramai, baik siang ataupun malam hari. Para pengunjung datang ke tempat ini untuk melaksanakan ibadah shalat 5 waktu atau menghadiri berbagai acara kajian islam dan yang lainnya.</string>
    <string name="content_masjid2">Tempat ini juga semakin gemar dikunjungi karena berdekatan atau satu lokasi dengan tempat wisata di Bandung yang menjadi favorit warga, yaitu Alun-Alun kota Bandung. Kawasan alun-alun kota bandung sangat menarik perhatian pengunjung dikarenakan pelatarannya dipasang rumput sintesis yang sangat indah.</string>
    <string name="content_masjid3">Yang tidak kalah serunya adalah, jika anda ingin melihat hamparan kota Bandung yang sangat luas dan indah terlebih di malam hari dengan segala gemerlap lampu-lampu kotanya yang menyala , maka segeralah anda naik ke menara mesjid agung ini. Dengan menggunakan lift yang akan membawa anda dari bawah ke atas puncak menara mesjid setara lantai 19 ini, dengan waktu izin melihat hanya 15 menit /orang, maka nikmatilah pemandangan kota bandung dan sekitarnya, seperti gunung tangkuban perahu sangat terlihat jelas dari sini.</string>
    <string name="judul_tiket_masjid">Harga tiket masuk menara masjid raya bandung</string>
    <string name="tiket_masjid">Dewasa : Rp. 3000/orang\nAnak-Anak : Rp. 2000/orang</string>
    <string name="judul_alamat_masjid">Alamat Masjid Raya Bandung</string>
    <string name="alamat_masjid">Jalan Asia Afrika, Kota Bandung Jawa Barat Indonesia</string>
    <string name="content_tangkuban1">Gunung yang merupakan simbol pariwisata Bandung ini tentu saja akan selau diingat dan dikenang seluruh masyarakat Indonesia. Gunung Tangkuban perahu Bandung ini memang memiliki nilai khusus tersendiri sehingga semua orang tahu,dan bagi yang belum tahu justru akan menambah rasa penasaran untuk mengunjungi tempat wisata yang memiliki pemandangan alam yang sangat luar biasa indahnya ini,serta tentunya yang menjadi daya tarik lainnya dari gunung yang dekat dengan kawasan wisata Lembang ini,adalah suhu alam pegunungan yang dingin dan merupakan salah satu gunung yang terbilang masih aktif di indonesia.Tapi meskipun terbilang masih aktif,namun Gunung tangkuban perahu tidaklah berbahaya bagi masyarakat yang hendak melihat dari dekat keindahan gunung ini.? Bagimana pun keindahan serta kisah legenda kontroversialnya yang melekat di gunung yang satu ini,yaitu tentang cerita seorang anak yang bernama Sangkuriang,yang mencintai dan sekaligus ingin menikahi ibunya sendiri yang bernama dayang sumbi.</string>
    <string name="judul_tiket_tangkuban">Harga tiket masuk tangkuban perahu</string>
    <string name="tiket_tangkuban">isebutkannya, untuk karcis hari kerja bagi wisatawan nusantara yang awalnya Rp15.0000 menjadi Rp20.000. Untuk wisatawan mancanegara dari Rp100.000 menjadi Rp200.000. Kendaraan roda dua dari Rp7.000 menjadi Rp12.000. Kendaraan roda empat dari Rp15.000 menjadi Rp25.000. Kendaraan roda enam dari Rp60.000 menjadi Rp110.000 dan untuk sepeda dari Rp5.000 menjadi Rp7.000. Sementara untuk tarif masuk tangkuban perahu pada hari libur bagi wisatawan nusantara dari Rp22.500 menjadi Rp30.000. Wisatawan mancanegara dari Rp150.000 menjadi Rp300.000. Kendaraan roa dua dari Rp9.500 menjadi Rp17.000. Kendaraan roda empat dari Rp20.000 menjadi Rp35.000. Kendaraan roda enam dari Rp75.000 menjadi Rp150.000 dan untuk sepeda dari Rp7.000 menjadi Rp10.000.</string>
    <string name="judul_alamat_tangkuban">Alamat Tangkuban Perahu</string>
    <string name="alamat_tangkuban">Gn. Tangkuban Parahu Sukajaya, Lembang, Kab. Bandung Bar. 40391</string>
    <string name="judul_jam_tangkuban">Jam Buka Tangkuban Perahu</string>
    <string name="jam_tangkuban">Setiap hari, Senin – Minggu, Mulai Pukul 08.00 – 17.00 WIB</string>
    <string name="content_dusun1">Dusun Bambu Family Leisure Park adalah sebuah kawasan wisata favorit keluarga terutama yang berasal dari warga perkotaan seperti Jakarta yang berlamat di Jalan Kolonel Masturi KM 11, Desa Kertawangi, Cisarua Kabupaten Bandung Barat, Jawa Barat Indonesia.</string>
    <string name="content_dusun2">Bandung Barat, Jawa Barat Indonesia.
Dusun Bambu sendiri adalah bisa dikatakan salah satu dari daftar Tempat Wisata di Lembang Bandung bagian Utara. Berada tepat di kaki pegunungan Burangrang, maka sudah pasti keindahan alam yang asri dan masih alami serta berhawa sangat sejuk ini,menjadi daya tarik tersendiri atau nilai jual yang coba ditawarkan Dusun Bambu Family Leisure Park kepada wisatawan yang berkunjung ke sini.
</string>
    <string name="content_dusun3">Dusun Bambu Lembang sendiri,meskipun baru,namun kawasan wisata terpadu ini telah dilengkapi dengan banyak fasilitas dan bisa dibilang sebagai tempat wisata di Bandung yang terlengkap.Selain sebagai Tempat Wisata Alam di Lembang bandung yang memang dikenal masih kental memiliki keindahan natural alamnya,Dusun Bambu Lembang pun bisa dibilang sebagai tempat wisata keluarga,kuliner dan belanja di Bandung.</string>
    <string name="content_dusun4">Di Dusun Bambu Lembang ini anda bisa mendapatkan sekaligus menikmati beragam aneka menu kuliner yang enak dan lezat di 3 Tempat Kuliner di Dusun Bambu yang berbeda seperti Cafe dan Resto Burangrang, Pasar Khatulistiwa serta Restaurant Purbasari.</string>
    <string name="judul_tiket_dusun">Harga tiket dusun bambu</string>
    <string name="tiket_dusun">Tiket Masuk Dusun Bambu Family Leisure Park Rp.15.000/orang\n
                                Tiket Parkir Kendaraan Roda Empat Rp.10.000\n
                                Tiket Parkir Kendaraan Roda Dua Rp.5.000</string>
    <string name="judul_alamat_dusun">Alamat Dusun Bambu</string>
    <string name="alamat_dusun">Alamat Dusun Bambu Family Leisure Park ini adalah berlokasi di Jalan Kolonel Masturi KM 11, Situ Lembang, Cisarua, Kabupaten Bandung Barat, Bandung Jawa Barat Indonesia.</string>
    <string name="judul_jam_dusun">Jam Buka Dusun Bambu</string>
    <string name="jam_dusun">Jam operasional Dusun Bambu adalah setiap hari, Senin – Minggu, mulai pukul 08.00 – 21.00 WIB</string>
    <string name="content_deranch1">De Ranch Lembang adalah salah satu tempat wisata di Bandung yang merupakan sebuah kawasan wisata yang unik serta eksotis yang berlokasi di areal dataran tinggi pegunungan Lembang. Tempat wisata D’Ranch yang selalu menjadi buruan wisatawan yang berlibur ke tanah pasundan ini memang merupakan destinasi wisata favorit dan terpopuler beberapa tahun terakhir.</string>
    <string name="content_deranch2">De Ranch Lembang menawarkan konsep wisata khas lembang yang sangat unik dan mengesankan,pengunjung ditantang menjelajah jengkal demi jengkal lokasi De Ranch menggunakan Kuda lengkap memakai atribut cowboy seperti topi cowboy, baju cowboy, sepatu cowboy dan lainnya.</string>
    <string name="judul_tiket_deranch">Harga Tiket Masuk De Ranch</string>
    <string name="tiket_deranch">Senin Libur\nSelasa – Jum’at : Rp.5.000 ( Plus wellcome drink susu )\nSabtu – Minggu/Libur : Rp.5.000</string>
    <string name="judul_alamat_deranch">Alamat De Ranch</string>
    <string name="alamat_deranch">Jln.Maribaya No 17, Lembang Bandung ( Lokasinya 200 meter dari pertigaan pasar Lembang )</string>
    <string name="judul_jam_deranch">Jam Buka De Ranch</string>
    <string name="jam_deranch">Senin Libur\nSelasa – Jumat : 09.00 – 17.00 WIB\nSabtu - Minggu/Libur :  08.00 – 18.00 WIB.</string>
    <string name="content_seblak1">Seblak adalah makanan Indonesia yang bercita rasa gurih dan pedas, yang terbuat dari kerupuk basah yang dimasak dengan sayuran dan sumber protein seperti telur, ayam, boga bahari atau olahan daging sapi, dimasak dengan bumbu tertentu.[1] Seblak adalah makanan khas Bandung, Jawa Barat. Seblak kini menjadi makanan jajanan jalanan yang digemari berbagai kalangan masyarakat terutama di daerah Jawa Barat dan Jabodetabek. Seblak disajikan di rumah makan dan warung, serta dijajakan di gerobak pedagang keliling. Makanan yang bertekstur kenyal ini memiliki rasa yang pedas dan menyegarkan, serta memiliki beberapa variasi, baik rasa maupun bahan tambahan juga kemasan.</string>
    <string name="judul_jenis_seblak">Jenis Seblak</string>
    <string name="jenis_seblak">1. Seblak kering (walaupun agak jarang ditemukan), adalak kerupuk pedas mirip dengan basreng\n2. Seblak basah: seblak makaroni, seblak ceker ayam, seblak mie basah, seblak tulang, seblak baso , seblak basreng ( baso goreng ) , seblak batagor , seblak aci , seblak kwetiaw , seblak siomay , seblak snack dll.</string>
    <string name="content_seblak2">Saat ini seblak sedang meleganda dan hits di kalangan remaja, yaitu Seblak Deu Tjenghar di Bandung dan Seblak Jeletet Murni di Jakartas.</string>
    <string name="judul_alamat_deu">Alamat Seblak Deu’ Tjenghar</string>
    <string name="alamat_deu">Jl. Purnawarman, Babakan Ciamis, Sumur Bandung, Kota Bandung, Jawa Barat 40117</string>
    <string name="judul_alamat_jeletet">Alamat Seblak Jeletet Murni</string>
    <string name="alamat_jeletet">Jl. Pademangan IV No.5, RT.3/RW.8, Pademangan Tim., Pademangan, Kota Jkt Utara, Daerah Khusus Ibukota Jakarta 14410</string>
    <string name="content_baru">Pasar Baru Trade Center Bandung merupakan salah satu tempat belanja favorit yang terkenal lengkap dan murah di kota Bandung Jawa barat. Bandung memang terkenal dengan pusat fashion dan kuliner sehingga tidak heran jika di pasar ini tersedia berbagai fashion, makanan maupun barang-barang yang beragam, tentunya dengan harga yang terjangkau. Di pasar baru trace center ini kita bisa membeli harga mulai dari mengecer sampai grosiran. Pengunjung Pasar Baru Trade Center ini berasal dari local bandung maupun luar bandung bahkan sampai luar negeri.</string>
    <string name="judul_lantai">Informasi lantai di pasar baru</string>
    <string name="lantai">L 7= Area Parkir\nL 6= Bandung Food Court, Game Master, Furniture, Salon\nL 5= Muda Mudi Xenter, Salon Kecantikan, Handphone, DVD\nL 4= Fashion, Sepatu, Aksesoris, Pusat Perlengkapan Haji dan Busana Muslim\nL 3= Fashion, Tas, Perlengkapan Bayi dan Anak, Pusat Pakaian Dalam\nL 2= Bank, ATM, Toko Mas, Tekstil\nL 1= Tekstil, Sprei, Bedcover, Karpet, Sarung\nD 2= Tas, Sepatu dan Sandal, Fashion, Busana Muslim, Pusat Jaket\nD 1= Busana Muslim, Fashion, Tekstil, Aksesoris</string>
    <string name="judul_alamat_baru">Alamat Pasar Baru Trade Center</string>
    <string name="alamat_baru">Jalan Otto Iskandardinata No. 70, Bandung</string>
    <string name="content_cibaduyut1">Cibaduyut adalah suatu kawasan yang masuk ke dalam wilayah kabupaten Bandung Selatan,mempunyai lokasi yang sangat strategis berbatasan dengan pusat kota Bandung seperti hanya beberapa ratus meter dari Terminal Leuwipanjang serta rute jalannya yang dilewati jalur By Pass yang membelah kota Bandung.</string>
    <string name="content_cibaduyut2">Terkenal karena Kualitas serta model sepatu yang diproduksi ditempat ini Up To Date,dan yang paling Populer dan mampu menjadikannya terkenal ke dunia adalah kemampuan para pengrajin sepatu membuat sepatu secara manual dengan tangan (Hand Made Shoes) sekaligus mengekspornya ke hampir ke 27 negara di dunia,dengan pasar utamanya Amerika serikat yang hampir 46,16 persen.</string>
    <string name="judul_alamat_cibaduyut">Alamat Pasar Cibaduyut</string>
    <string name="alamat_cibaduyut">Kawasan wisata perbelanjaan dan juga kuliner ini menempati lokasi sepanjang jalur jalan Cibaduyut Raya.</string>
</resources>